--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,11 @@
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "index.html",
+    "default_title": "Block Phobias!"
   },
   "permissions": [
-    "cookies"
+    "cookies",
     "activeTab",
     "storage"
   ]
