--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,13 @@
   "description": "This extension blocks out all images that may contain contents that a user is afraid of seeing (phobias).",
   "version": "1.0",
   "options_ui": {
-    "page": "popup.html",
+    "page": "index.html",
     "chrome_style": true
   },
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "popup.html",
+    "default_popup": "index.html",
     "default_title": "Block Phobias!"
   },
   "content_scripts": [{
