--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,16 @@
   "manifest_version": 2,
 
   "name": "Phobia Blocker",
-  "description": "This extension blocks out all images that may contain contents that a user is afraid of seeing (phobias).",
+  "description": "This extension blocks out all images that may contain content that a user is afraid of seeing (phobias).",
   "version": "1.0",
   "options_ui": {
-    "page": "index.html",
+    "page": "PopUpUI/popup.html",
     "chrome_style": true
   },
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_popup": "index.html",
+    "default_popup": "PopUpUI/popup.html",
     "default_title": "Block Phobias!"
   },
   "content_scripts": [{
